--- a/src/content/index.html
+++ b/src/content/index.html
@@ -7,7 +7,7 @@ layout: page.hbs
 	<div class="d-flex flex-items-xs-middle flex-items-xs-center w-100">
 		<div class="media">
 			<div class="media-left media-middle">
-				<img class="rounded-circle media-object" style="max-width: 100px" src="/assets/img/reed.jpg">
+				<img class="rounded-circle media-object avatar" src="/assets/img/reed.jpg">
 			</div>
 			<div class="media-body media-middle text-xs-center">
 				<h1 class="media-heading h4">Reed Dadoune</h1>
