--- a/src/content/index.html
+++ b/src/content/index.html
@@ -8,7 +8,9 @@ bodyClasses: home
 	<div class="d-flex flex-items-xs-middle flex-items-xs-center w-100">
 		<div class="media">
 			<div class="media-left media-middle">
-				<img class="rounded-circle media-object avatar" src="/assets/img/reed.jpg">
+				<img class="rounded-circle media-object avatar"
+					src="/assets/img/reed.jpg"
+					srcset="/assets/img/reed@2x.jpg 2x">
 			</div>
 			<div class="media-body media-middle text-xs-center">
 				<h1 class="media-heading h4">Reed Dadoune</h1>
