Added img alt tag

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -9,6 +9,7 @@ bodyClasses: home
 		<div class="media">
 			<div class="media-left media-middle">
 				<img class="rounded-circle media-object avatar"
+					alt="Reed Dadoune"
 					src="/assets/img/reed.jpg"
 					srcset="/assets/img/reed@2x.jpg 2x">
 			</div>
