Upgrade dependencies. Migrate to bootstrap v4-alpha-6.

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -5,15 +5,15 @@ bodyClasses: home
 ---
 
 <section class="container d-flex">
-	<div class="d-flex flex-items-xs-middle flex-items-xs-center w-100">
+	<div class="d-flex align-self-center justify-content-center w-100">
 		<div class="media">
-			<div class="media-left media-middle">
+			<div class="pr-2 align-self-center">
 				<img class="rounded-circle media-object avatar"
 					alt="Reed Dadoune"
 					src="/assets/img/reed.jpg"
 					srcset="/assets/img/reed@2x.jpg 2x">
 			</div>
-			<div class="media-body media-middle text-xs-center">
+			<div class="media-body align-self-center text-center">
 				<h1 class="media-heading h4">Reed Dadoune</h1>
 				<h2 class="subtitle">
 					MEAN | LAMP | iOS
