--- a/src/content/offline.html
+++ b/src/content/offline.html
@@ -6,9 +6,9 @@ bodyClasses: offline
 ---
 
 <section class="container d-flex">
-	<div class="d-flex flex-items-xs-middle flex-items-xs-center w-100">
+	<div class="d-flex align-self-center justify-content-center w-100">
 		<div class="media">
-			<div class="media-body media-middle text-xs-center">
+			<div class="media-body align-self-center text-center">
 				<h1 class="media-heading h4">Offline</h1>
 				<h2 class="subtitle">
 					You are currently offline and only able to view previously visited content.
