--- a/src/content/404.html
+++ b/src/content/404.html
@@ -6,9 +6,9 @@ bodyClasses: page-404
 ---
 
 <section class="container d-flex">
-	<div class="d-flex flex-items-xs-middle flex-items-xs-center w-100">
+	<div class="d-flex align-self-center justify-content-center w-100">
 		<div class="media">
-			<div class="media-body media-middle text-xs-center">
+			<div class="media-body align-self-center text-center">
 				<h1 class="media-heading h4">404</h1>
 				<h2 class="subtitle">
 					Sorry page cannot be found.
